# snip

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  release-please-config.json  rust-toolchain.toml
.claude-plugin/: marketplace.json
.claude/rules/: architecture.md  dependencies.md  hook-protocol.md  rust-conventions.md  testing.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-e2e.yml  release.yml
examples/: bench.rs  latency.rs
plugins/snip/: README.md
plugins/snip/.claude-plugin/: plugin.json
plugins/snip/commands/: config.md  disable.md  enable.md  gain.md  shell-setup.md  snip-config.md  snip-disable.md  snip-enable.md  snip-gain.md  snip-shell-setup.md  snip-status.md  snip-uninstall.md  snip-update.md  snip.md  status.md  uninstall.md  update.md
plugins/snip/hooks/: hooks.json
plugins/snip/scripts/: snip-bootstrap.sh  snip-cmd.sh  snip-run.sh  snip-shell-setup.sh  snip-uninstall.sh
src/: clock.rs  lib.rs  lifecycle.rs  main.rs  panic_guard.rs  paths.rs  relevance.rs  tokens.rs
src/cli/: command.rs  mod.rs
src/commands/: config_cmd.rs  gain.rs  mod.rs  resolve.rs  shell_path.rs  status.rs  uninstall.rs  update.rs
src/compaction/: code_lines.rs  collapse.rs  compactor.rs  mod.rs  parse.rs  reexpand.rs  single_line.rs  splice.rs  whitespace.rs
src/config/: accessors.rs  autodetect_cfg.rs  compact_mode.rs  mod.rs  optimizer_cfg.rs  project.rs  validate.rs
src/domain/: hook_ctx.rs  mod.rs  optimizer.rs  outcome.rs  surface.rs
src/engine/: dispatcher.rs  mod.rs  outcome_serializer.rs  registry.rs  tool_response.rs
src/hooks/: mod.rs  session_reset.rs  update_check.rs
src/languages/: language_spec.rs  mod.rs  registry.rs
src/optimizers/: mod.rs  redact.rs  spec_optimizer.rs
src/optimizers/command/: assemble.rs  autodetect.rs  b64.rs  bash_route.rs  (+11 more)
src/overflow/: elide_strategy.rs  mod.rs  overflow_cfg.rs  spill.rs
src/spec/: ansi.rs  bind.rs  dedupe.rs  diff_fold.rs  fp_window.rs  group_key.rs  log_fold.rs  log_mask.rs  mod.rs  optimizer_spec.rs  parse_format.rs  project.rs  rank_key.rs  squeeze.rs  stacktrace.rs  str_pred.rs  template.rs  test_rollup.rs  transform.rs  truncate.rs
src/stats/: db.rs  event.rs  mod.rs  pricing.rs  recorder.rs  summary.rs  tracking.rs
tests/docker/: Dockerfile  README.md  phase-a-contract.test.mjs  phase-b-bash.test.mjs  phase-b-conformance.test.mjs  phase-b-edit-write.test.mjs  phase-b-grep-modes.test.mjs  phase-b-languages.test.mjs  phase-b-lifecycle-banner.test.mjs  phase-b-lifecycle.test.mjs  phase-b-plugin-install.test.mjs  phase-b-shell-setup.test.mjs  phase-c-efficacy.test.mjs  run-docker.sh  run.sh
tests/e2e/: README.md  cli.tests.rs  command.tests.rs  edit_write.tests.rs  main.rs  maintenance.tests.rs  read_hook.tests.rs  robustness.tests.rs  search_hooks.tests.rs  support.rs
tests/integration/: command_pipeline.tests.rs  config_layering.tests.rs  edit_correction.tests.rs  exec_runtime.tests.rs  main.rs  overflow_spill.tests.rs  read_pipeline.tests.rs  search_pipeline.tests.rs  stats_net.tests.rs
tests/unit/: lifecycle.tests.rs  panic_guard.tests.rs  paths.tests.rs
(+105 files in other folders)
